# cs_sdk-examples

./: CMakeLists.txt  README.md  graphql  license  main.cpp  program  readme  text.md
.github/workflows/: README.md  ci.yml  cmake.yml  code-quality.yml  release.yml
core/: engine.h  entity.h  evets.h
examples/test_plugin/: test_plugin.cpp
hooks/: vmt_hook.h
include/: plugin.h  plugin_manager.h
include/ecs/: components.h  ecs.h  entity.h  esc.h  lua_api.cpp
include/sdk/: engine.h  event_bus.h  events.h  log.h  lua_engine.h  plugin.h  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  sdk.h  tick.h
include/sdk/ecs/: ecs.inl
include/sdk/scripting/: lua_api.h
plugins/: example_plugin.cpp  gameplay.lua
scripts/: test.lua
src/: lua_engine.cpp  plugin_manager.cpp  sdk.cpp
src/ecs/: ecs.cpp
src/scripting/: lua_api.cpp
